# ferrunix

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Contributors-License-Agreement.md  LICENSE-APACHE  LICENSE-MIT  Makefile.toml  README.md  cliff.toml  clippy.toml  deny.toml  play.rs  release-plz.toml  rustfmt.toml
.cargo/: config.toml
.config/: nextest.toml
.github/workflows/: ci.yml  docs.yml  mdbook.yml  release-plz.yml
book/: book.toml
book/src/: SUMMARY.md  introduction.md
book/src/reference-guide/: derive-macro.md  feature-flags.md  registry.md
book/src/user-guide/: core-concepts-lifetimes.md  core-concepts-registration.md  core-concepts-registry.md  core-concepts-retrieval.md  core-concepts.md  first-steps.md  installation.md
doc-tests/: Cargo.toml  build.rs
doc-tests/src/: lib.rs
examples/: README.md
examples/derived/: Cargo.toml  README.md
examples/derived/src/: main.rs
examples/simple/: Cargo.toml
examples/simple/src/: main.rs  traits.rs
ferrunix/: Cargo.toml  README.md  build.rs
ferrunix-core/: Cargo.toml  README.md
ferrunix-core/src/: cycle_detection.rs  dependencies.rs  dependency_builder.rs  error.rs  lazy_transient.rs  lib.rs  object_builder.rs  object_builder_async.rs  object_builder_sync.rs  object_builder_unsync.rs  registration.rs  registry.rs  types.rs  types_sync.rs  types_tokio.rs  types_unsync.rs
ferrunix-core/tests/it/: manual.rs
ferrunix-macros/: Cargo.toml  README.md
ferrunix-macros/src/: attr.rs  attr_tests.rs  inject.rs  lib.rs  utils.rs  utils_test.rs
ferrunix-macros/tests/it/: common.rs  main.rs  test_derive.rs  test_manual.rs
ferrunix/src/: lib.rs
ferrunix/tests/: skeptic.rs
ferrunix/tests/it/: child.rs  common.rs  cycle_test.rs  derive_async.rs  derive_ctor.rs  derive_registration.rs  derive_regression.rs  derive_simple.rs  derive_singleton.rs  main.rs  manual.rs  manual_async.rs  manual_non_object_safe.rs  manual_traits.rs  race_async.rs  race_sync.rs  stress.rs  validate_traits.rs
rusty-injector/: Cargo.toml
rusty-injector-core/: Cargo.toml
rusty-injector-core/src/: error.rs  lazy_transient.rs
rusty-injector-core/tests/it/: main.rs  manual.rs
rusty-injector-macros/: Cargo.toml
rusty-injector-macros/src/: attr.rs  attr_tests.rs  lib.rs
rusty-injector-macros/tests/: it.rs
rusty-injector-macros/tests/it/: common.rs  main.rs  test_derive.rs  test_manual.rs
rusty-injector-macros/tests/tests/: common.rs  mod.rs  test1.rs  test_derive.rs  test_manual.rs
rusty-injector/src/: dependencies.rs  dependency_builder.rs  error.rs  lazy_transient.rs  lib.rs  registry.rs
rusty-injector/tests/it/: main.rs
src/: old.rs  test.rs
xtask/: Cargo.toml
xtask/src/: ci.rs  docs.rs  main.rs  publish.rs
