[package]
name = "ferrunix-core"
version = "0.2.0"
description = "Core types, traits, and implementations for ferrunix"
readme = "README.md"
# Inherited.
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[features]
default = []
multithread = ["once_cell/parking_lot"]
tokio = ["dep:tokio", "dep:async-trait"]

[dependencies]
once_cell = { version = "1.11" }
parking_lot = "0.12"
thiserror = "1"
inventory = "0.3.1"
tokio = { version = "1.5", default-features = false, features = ["sync", "parking_lot"], optional = true }
async-trait = { version = "0.1", optional = true }

[package.metadata."docs.rs"]
all-features = true
