[package]
name = "ferrunix-core"
version = "0.3.0"
description = "Core types, traits, and implementations for ferrunix"
readme = "README.md"
# Inherited.
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[features]
default = []
multithread = ["once_cell/parking_lot"]
tokio = ["dep:tokio", "dep:async-trait"]

[dependencies]
once_cell = { version = "1.11" }
parking_lot = "0.12"
thiserror = "1"
inventory = "0.3.1"
tokio = { version = "1.21", default-features = false, features = ["rt", "sync", "parking_lot"], optional = true }
async-trait = { version = "0.1", optional = true }

# Docs about this available here <https://docs.rs/about/metadata>
[package.metadata."docs.rs"]
features = ["multithread"]
