[package]
name = "ferrunix-core"
version = "0.4.0"
description = "Core types, traits, and implementations for ferrunix"
readme = "README.md"
# Inherited.
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[features]
default = []
multithread = ["once_cell/parking_lot"]
tokio = ["dep:tokio", "dep:async-trait"]
tracing = ["dep:tracing"]

[dependencies]
once_cell = { version = "~1.20" }
parking_lot = "0.12"
thiserror = "1"
inventory = "0.3.1"
tokio = { version = "1", default-features = false, features = ["rt", "sync", "parking_lot"], optional = true }
async-trait = { version = "0.1", optional = true }
tracing = { version = "0.1", optional = true }
hashbrown = "0.15"

petgraph = { version = "0.6" }
fixedbitset = { version = "~0.4.2" } # used/required by `petgraph`

# Docs about this available here <https://docs.rs/about/metadata>
[package.metadata."docs.rs"]
features = ["multithread"]
