[package]
name = "ferrunix-macros"
version = "0.4.0"
description = "Proc-macro for ferrunix"
readme = "README.md"
# Inherited.
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[lib]
proc-macro = true

[features]
default = ["development"]
multithread = []
tokio = []
development = ["syn/extra-traits", "dep:prettyplease"]

[dependencies]
syn = { version = "2", features = ["extra-traits"] }
prettyplease = { version = "0.2", optional = true }
proc-macro2 = "1.0.60"
quote = "1"
darling = "0.20"

[dev-dependencies]
thiserror = "1"

# Docs about this available here <https://docs.rs/about/metadata>
[package.metadata."docs.rs"]
features = ["multithread"]
