[package]
name = "ferrunix"
version = "0.4.0"
description = "A lightweight run-time dependency injection framework for Rust"
readme = "README.md"
# Inherited.
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[features]
default = ["derive"]
multithread = ["ferrunix-core/multithread"]
derive = ["dep:ferrunix-macros"]
tokio = ["ferrunix-core/tokio", "ferrunix-macros?/tokio"]
tracing = ["ferrunix-core/tracing"]

[dependencies]
ferrunix-core = { path = "../ferrunix-core", default-features = false, version = "=0.4.0" }
ferrunix-macros = { path = "../ferrunix-macros", optional = true, version = "=0.4.0" }

[dev-dependencies]
thiserror = "1"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
paste = "1.0"

# Docs about this available here <https://docs.rs/about/metadata>
[package.metadata."docs.rs"]
features = ["derive", "multithread"]
