[package]
name = "rusty-injector-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
rusty-injector.workspace = true

syn = { version = "2", features = ["extra-traits"] }
proc-macro2 = "1"
quote = "1"
prettyplease = "0.2"
darling = "0.20"

[dev-dependencies]
thiserror = "1"
