[package]
name = "rusty-injector-macros"
version = "0.1.0"
# Inherited.
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

# [lints]
# workspace = true

[lib]
proc-macro = true

[dependencies]
rusty-injector.workspace = true

syn = { version = "2", features = ["extra-traits"] }
proc-macro2 = "1"
quote = "1"
prettyplease = "0.2"
darling = "0.20"

[dev-dependencies]
thiserror = "1"
