[package]
name = "rusty-injector-macros"
version = "0.1.0"
description = "Proc-macro for rusty-injector"
# Inherited.
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

# [lints]
# workspace = true

[lib]
proc-macro = true

[features]
default = ["development"]
development = ["syn/extra-traits", "dep:prettyplease"]

[dependencies]
rusty-injector-core.workspace = true

syn = { version = "2", features = ["extra-traits"] }
prettyplease = { version = "0.2", optional = true }
proc-macro2 = "1"
quote = "1"
darling = "0.20"

[dev-dependencies]
thiserror = "1"
