[package]
name = "rusty-injector"
version = "0.1.0"
edition = "2021"

[feature]
default = []
hashbrown = ["dep:hashbrown"]

[dependencies]
once_cell = { version = "1", features = ["parking_lot"] }
parking_lot = "0.12"
thiserror = "1"
inventory = "0.3"

hashbrown = { version = "0", optional = true }
