[package]
name = "rusty-injector"
version = "0.1.0"
# Inherited.
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

# [lints]
# workspace = true

[features]
default = ["multithread"]
hashbrown = ["dep:hashbrown"]
multithread = []

[dependencies]
once_cell = { version = "1", features = ["parking_lot"] }
parking_lot = "0.12"
thiserror = "1"
inventory = "0.3"

# Optional dependencies
hashbrown = { version = "0", optional = true }
