[package]
name = "rusty-injector"
version = "0.1.0"
description = "A lightweight run-time dependency injection framework for Rust"
# Inherited.
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

# [lints]
# workspace = true

[features]
default = ["multithread", "derive"]
multithread = ["rusty-injector-core/multithread"]
derive = ["dep:rusty-injector-macros"]

[dependencies]
rusty-injector-core = { path = "../rusty-injector-core", default-features = false }

# Optional dependencies
rusty-injector-macros = { workspace = true, optional = true }
