[package]
name = "xtask"
version = "0.0.0"
publish = false
# Inherited.
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
xshell = "0.2"
anyhow = "1"
clap = { version = "=4.1.14", features = ["derive"] }
itertools = "0.13"
